# fsr-rs

./: .gitignore  Cargo.toml  README.md  build.rs
http/: debug.html  index.html  script.js  style.css
lua/: ProfileSwitcher.lua  globals.lua
src/: main.rs  profile.rs  serial.rs
