[package]
name = "fsr-rs"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-tungstenite = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"
tower = "0.4"
hyper = { version = "1.0", features = ["full"] }
tokio-serial = "5.4.1"
bytes = "1.0"
futures = "0.3"
tokio-util = "0.7"
serialport = "4.7.2"
clap = { version = "4.0", features = ["derive"] }


[dev-dependencies]
tokio-tungstenite = "0.24"
